# renamer

./: .gitignore  README.md  macos_ocr.swift  macos_pdf_page_render.swift  macos_pdf_resave.swift  ollama_document_renamer.py  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_conftest_mocks.py  test_exclusions_iter_audit.py  test_json_ollama_helpers.py  test_main_and_mocks.py  test_pdf_paths.py  test_text_processing.py
