[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "ollama-document-renamer"
version = "0.1.0"
description = "Scan a directory, summarize files with local Ollama, and rename to descriptive titles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "tqdm>=4.66.0",
]
keywords = ["ollama", "rename", "documents", "macos", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: MacOS X",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Filesystems",
]

[project.scripts]
ollama-document-renamer = "ollama_document_renamer:main"

[tool.hatch.build.targets.sdist]
include = [
  "/ollama_document_renamer.py",
  "/macos_ocr.swift",
  "/macos_pdf_page_render.swift",
  "/README.md",
]

[tool.hatch.build.targets.wheel]
only-include = [
  "ollama_document_renamer.py",
  "macos_ocr.swift",
  "macos_pdf_page_render.swift",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
